# MacBomber-legacy

./: CApplication.cpp  CApplication.h  CConfig.cpp  CConfig.h  CExplosion.cpp  CExplosion.h  Defines.h  icon.icns  main.cpp
Controller/: CController.cpp  CController.h  CController_Joystick.cpp  CController_Joystick.h  CController_Keyboard.cpp  CController_Keyboard.h
Engine/: 3DMath.cpp  3DMath.h  CBillboard.cpp  CBillboard.h  CBoundingBox_2D.cpp  CBoundingBox_2D.h  CCamera.cpp  CCamera.h  CClock.cpp  CClock.h  CInputManager.cpp  CInputManager.h  CMatrix.cpp  CMatrix.h  CMeshManager.cpp  CMeshManager.h  CScreenFader.cpp  CScreenFader.h  CSimpleBezier.cpp  CSimpleBezier.h  CSoundManager.cpp  CSoundManager.h  CTextDrawer.cpp  CTextDrawer.h  CTextureManager.cpp  CTextureManager.h  CTimer.cpp  CTimer.h  CTriangle.h  CTriangleMesh.cpp  CTriangleMesh.h  CVector3.cpp  CVector3.h  CWobbler.cpp  CWobbler.h  Init.cpp  Init.h  Workaround.h  checkScreenResolution.cpp  checkScreenResolution.h  (+10 more)
Engine/ParticleSystem/: CParticle.cpp  CParticle.h  CParticleManager.cpp  CParticleManager.h  CParticle_Crate.cpp  CParticle_Crate.h  CParticle_Explosion.cpp  CParticle_Explosion.h  CParticle_Item.cpp  CParticle_Item.h  CParticle_Smoke.cpp  CParticle_Smoke.h  CParticle_SmokeTrail.cpp  CParticle_SmokeTrail.h
English.lproj/: InfoPlist.strings
Gametypes/: CGame.cpp  CGame.h  CGame_MapDestruction.cpp  CGame_MapDestruction.h  CGame_Standard.cpp  CGame_Standard.h
MacBomber.xcode/: project.pbxproj
MacBomber.xcodeproj/: project.pbxproj
Map/: CField.cpp  CField.h  CField_Arrow.cpp  CField_Arrow.h  CField_Block.cpp  CField_Block.h  CField_Hole.cpp  CField_Hole.h  CField_Plain.cpp  CField_Plain.h  CField_Void.cpp  CField_Void.h  CMap.cpp  CMap.h  CMapDestroyer.cpp  CMapDestroyer.h  CMapManager.cpp  CMapManager.h  CMapPlaylist.cpp  CMapPlaylist.h  CShaker.cpp  CShaker.h  StMapEntry.h
Maps/: Makefile.am  Makefile.in
Menu/: CApplicationMenu.cpp  CApplicationMenu.h  CControllerSetupItem.cpp  CControllerSetupItem.h  CHUD.cpp  CHUD.h  CLabelItem.cpp  CLabelItem.h  CLevelScrollListItem.cpp  CLevelScrollListItem.h  CLevelSelectionMenu.cpp  CLevelSelectionMenu.h  CMapPreview.cpp  CMapPreview.h  CMenu.cpp  CMenu.h  CMenuItem.cpp  CMenuItem.h  CMenuSwitchItem.cpp  CMenuSwitchItem.h  CPlayerSetupItem.cpp  CPlayerSetupItem.h  CPlayerSetupMenu.cpp  CPlayerSetupMenu.h  CPlayerSetupRow.cpp  CPlayerSetupRow.h  CScoreScreen.cpp  CScoreScreen.h  CTimebar.cpp  CTimebar.h  CToggleItem.cpp  CToggleItem.h  CValueItem.cpp  CValueItem.h
MeshObjects/: CBlockMesh.cpp  CBlockMesh.h  CBombMesh.cpp  CBombMesh.h  CCrateMesh.cpp  CCrateMesh.h  CCupMesh.cpp  CCupMesh.h  CItemMesh.cpp  CItemMesh.h  CMesh.cpp  CMesh.h  CPlayerMesh.cpp  CPlayerMesh.h  CSquareMesh.cpp  CSquareMesh.h
Meshes/: MacClassic.3ds  block.3ds  bomb.3ds  crate.3ds  cup.3ds  item.3ds
Objects/: CBomb.cpp  CBomb.h  CBombThrower.cpp  CBombThrower.h  CCrate.cpp  CCrate.h  CItem.cpp  CItem.h  CItemManager.cpp  CItemManager.h  CItemThrower.cpp  CItemThrower.h  CItem_BombUp.cpp  CItem_BombUp.h  CItem_Cocaine.cpp  CItem_Cocaine.h  CItem_Condom.cpp  CItem_Condom.h  CItem_EnableKick.cpp  CItem_EnableKick.h  CItem_Joint.cpp  CItem_Joint.h  CItem_PowerUp.cpp  CItem_PowerUp.h  CItem_SpeedUp.cpp  CItem_SpeedUp.h  CItem_Viagra.cpp  CItem_Viagra.h  CObject.cpp  CObject.h  CObjectThrower.cpp  CObjectThrower.h  CObjectThrowerManager.cpp  CObjectThrowerManager.h  CObject_Moving.cpp  CObject_Moving.h  CPlayer.cpp  CPlayer.h  CWiley.cpp  CWiley.h
Sounds/: README.rtf
