EXTRA_DIST = Crammed.map Hole_Run.map Obstacle_Race.map Prison_Cells.map Small_Standard.map Tiny_Standard.map Football.map Kitchen.map Whole_Mess.map Redirection.map Bloody_Ring.map Four_Instance.map Ghostbear.map Hard_Work.map Meeting.map Overkill.map Sixty_Nine.map Boiling_Egg.map Bomb_Attack.map Arena.map Big_Block.map Big_Standard.map Blast_Matrix.map Death_Corridor.map Dilemma.map FearCircle.map FearCircle_Remix.map FireWheels.map Huge_Standard.map Juicy_Lucy.map MungoBane.map Snake_Race.map Broken_Heart.map

install-data-local:
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Crammed.map @datadir@/clanbomber/maps/Crammed.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Hole_Run.map @datadir@/clanbomber/maps/Hole_Run.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Obstacle_Race.map @datadir@/clanbomber/maps/Obstacle_Race.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Prison_Cells.map @datadir@/clanbomber/maps/Prison_Cells.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Small_Standard.map @datadir@/clanbomber/maps/Small_Standard.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Tiny_Standard.map @datadir@/clanbomber/maps/Tiny_Standard.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Football.map @datadir@/clanbomber/maps/Football.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Kitchen.map @datadir@/clanbomber/maps/Kitchen.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Whole_Mess.map @datadir@/clanbomber/maps/Whole_Mess.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Redirection.map @datadir@/clanbomber/maps/Redirection.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Bloody_Ring.map @datadir@/clanbomber/maps/Bloody_Ring.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Four_Instance.map @datadir@/clanbomber/maps/Four_Instance.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Ghostbear.map @datadir@/clanbomber/maps/Ghostbear.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Hard_Work.map @datadir@/clanbomber/maps/Hard_Work.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Meeting.map @datadir@/clanbomber/maps/Meeting.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Overkill.map @datadir@/clanbomber/maps/Overkill.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Sixty_Nine.map @datadir@/clanbomber/maps/Sixty_Nine.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Boiling_Egg.map @datadir@/clanbomber/maps/Boiling_Egg.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Bomb_Attack.map @datadir@/clanbomber/maps/Bomb_Attack.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Arena.map @datadir@/clanbomber/maps/Arena.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Big_Block.map @datadir@/clanbomber/maps/Big_Block.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Big_Standard.map @datadir@/clanbomber/maps/Big_Standard.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Blast_Matrix.map @datadir@/clanbomber/maps/Blast_Matrix.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Death_Corridor.map @datadir@/clanbomber/maps/Death_Corridor.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Dilemma.map @datadir@/clanbomber/maps/Dilemma.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) FearCircle.map @datadir@/clanbomber/maps/FearCircle.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) FearCircle_Remix.map @datadir@/clanbomber/maps/FearCircle_Remix.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) FireWheels.map @datadir@/clanbomber/maps/FireWheels.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Huge_Standard.map @datadir@/clanbomber/maps/Huge_Standard.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Juicy_Lucy.map @datadir@/clanbomber/maps/Juicy_Lucy.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) MungoBane.map @datadir@/clanbomber/maps/MungoBane.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Snake_Race.map @datadir@/clanbomber/maps/Snake_Race.map
	$(mkinstalldirs) @datadir@/clanbomber/maps/
	$(INSTALL_DATA) Broken_Heart.map @datadir@/clanbomber/maps/Broken_Heart.map

uninstall-local:
	-rm -f @datadir@/clanbomber/maps/Crammed.map
	-rm -f @datadir@/clanbomber/maps/Hole_Run.map
	-rm -f @datadir@/clanbomber/maps/Obstacle_Race.map
	-rm -f @datadir@/clanbomber/maps/Prison_Cells.map
	-rm -f @datadir@/clanbomber/maps/Small_Standard.map
	-rm -f @datadir@/clanbomber/maps/Tiny_Standard.map
	-rm -f @datadir@/clanbomber/maps/Football.map
	-rm -f @datadir@/clanbomber/maps/Kitchen.map
	-rm -f @datadir@/clanbomber/maps/Whole_Mess.map
	-rm -f @datadir@/clanbomber/maps/Redirection.map
	-rm -f @datadir@/clanbomber/maps/Bloody_Ring.map
	-rm -f @datadir@/clanbomber/maps/Four_Instance.map
	-rm -f @datadir@/clanbomber/maps/Ghostbear.map
	-rm -f @datadir@/clanbomber/maps/Hard_Work.map
	-rm -f @datadir@/clanbomber/maps/Meeting.map
	-rm -f @datadir@/clanbomber/maps/Overkill.map
	-rm -f @datadir@/clanbomber/maps/Sixty_Nine.map
	-rm -f @datadir@/clanbomber/maps/Boiling_Egg.map
	-rm -f @datadir@/clanbomber/maps/Bomb_Attack.map
	-rm -f @datadir@/clanbomber/maps/Arena.map
	-rm -f @datadir@/clanbomber/maps/Big_Block.map
	-rm -f @datadir@/clanbomber/maps/Big_Standard.map
	-rm -f @datadir@/clanbomber/maps/Blast_Matrix.map
	-rm -f @datadir@/clanbomber/maps/Death_Corridor.map
	-rm -f @datadir@/clanbomber/maps/Dilemma.map
	-rm -f @datadir@/clanbomber/maps/FearCircle.map
	-rm -f @datadir@/clanbomber/maps/FearCircle_Remix.map
	-rm -f @datadir@/clanbomber/maps/FireWheels.map
	-rm -f @datadir@/clanbomber/maps/Huge_Standard.map
	-rm -f @datadir@/clanbomber/maps/Juicy_Lucy.map
	-rm -f @datadir@/clanbomber/maps/MungoBane.map
	-rm -f @datadir@/clanbomber/maps/Snake_Race.map
	-rm -f @datadir@/clanbomber/maps/Broken_Heart.map

.PHONY: files

files:
        @files=s $(DISTFILES) 2> /dev/null ; for p in $$files; do \
	  echo $$p; \
        done
        @for subdir in $(SUBDIRS); do \
	  files=d $$subdir; $(MAKE) files | grep -v "make\[[1-9]\]"; \
          for file in $$files; do \
            echo $$subdir/$$file; \
	  done; \
        done
